chore(readme, sample): replace watch with start

--- a/samples/0/package.json
+++ b/samples/0/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "node ../../bin/index.js watch",
+    "start": "node ../../bin/index.js watch",
     "build": "node ../../bin/index.js build"
   },
   "author": "abouthiroppy <git@about-hiroppy.com> (http://about-hiroppy.com)",
