--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "css-loader": "^0.28.7",
     "file-loader": "^0.11.2",
     "findup-sync": "^2.0.0",
+    "html-webpack-plugin": "^2.30.1",
     "postcss-loader": "^2.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
