--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "findup-sync": "^2.0.0",
     "html-webpack-plugin": "^2.30.1",
     "postcss-loader": "^2.0.6",
+    "react-hot-loader": "^3.0.0-beta.7",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1",
