--- a/samples/react/package.json
+++ b/samples/react/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-hot-loader": "^3.0.0-beta.7"
   }
 }
