--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "chalk": "^2.1.0",
     "css-loader": "^0.28.7",
+    "dotenv-webpack": "^1.5.4",
     "file-loader": "^0.11.2",
     "findup-sync": "^2.0.0",
     "html-webpack-plugin": "^2.30.1",
