--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-hot-loader": "^3.0.0-beta.7",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
+    "webpack-dashboard": "^1.0.0-5",
     "webpack-dev-server": "^2.7.1",
     "webpack-merge": "^4.1.0",
     "yamljs": "^0.3.0",
