--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "rules": {
     "no-console": 0,
-    "require-jsdoc": 0
+    "require-jsdoc": 0,
+    "no-underscore-dangle": 0
   },
   "env": {
     "node": true,
