--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "type": "git"
   },
   "bin": {
-    "sweetpack": "bin/index.js"
+    "sweetpack": "bin/sweetpack.js"
   },
   "engines": {
     "node": ">=6"
@@ -52,10 +52,11 @@
     "file-loader": "^0.11.2",
     "findup-sync": "^2.0.0",
     "html-webpack-plugin": "^2.30.1",
+    "lodash.merge": "^4.6.0",
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^3.0.0-beta.7",
     "style-loader": "^0.18.2",
-    "webpack": "^3.5.5",
+    "webpack": "^3.5.6",
     "webpack-dashboard": "^1.0.0-5",
     "webpack-dev-server": "^2.7.1",
     "webpack-merge": "^4.1.0",
@@ -65,9 +66,9 @@
   "devDependencies": {
     "ava": "^0.22.0",
     "conventional-changelog-cli": "^1.3.3",
-    "eslint": "^4.6.0",
+    "eslint": "^4.6.1",
     "eslint-config-sky": "^1.6.2",
-    "nyc": "^11.1.0",
+    "nyc": "^11.2.1",
     "pify": "^3.0.0"
   }
 }
