--- a/samples/multi-1/package.json
+++ b/samples/multi-1/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ../../bin/index.js watch",
-    "build": "node ../../bin/index.js build"
+    "start": "node ../../bin/sweetpack.js watch",
+    "build": "node ../../bin/sweetpack.js build"
   },
   "author": "abouthiroppy <git@about-hiroppy.com> (http://about-hiroppy.com)",
   "license": "MIT"
