--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "chalk": "^2.1.0",
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.7",
     "dotenv-webpack": "^1.5.4",
     "file-loader": "^0.11.2",
