--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.7",
     "dotenv-webpack": "^1.5.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "findup-sync": "^2.0.0",
     "html-webpack-plugin": "^2.30.1",
