--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-1": "^6.24.1",
     "chalk": "^2.1.0",
     "clean-webpack-plugin": "^0.1.16",
