--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-1": "^6.24.1",
+    "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "chalk": "^2.1.0",
     "clean-webpack-plugin": "^0.1.16",
     "cli-table": "^0.3.1",
