--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-minify-webpack-plugin": "^0.2.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-1": "^6.24.1",
@@ -59,8 +60,9 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "findup-sync": "^2.0.0",
+    "flow-status-webpack-plugin": "^0.1.7",
     "html-webpack-plugin": "^2.30.1",
-    "lodash.merge": "^4.6.0",
+    "lodash.mergewith": "^4.6.0",
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^3.0.0-beta.7",
     "style-loader": "^0.18.2",
