--- a/samples/all/package.json
+++ b/samples/all/package.json
@@ -16,6 +16,8 @@
     "react-hot-loader": "^3.0.0-beta.7"
   },
   "devDependencies": {
+    "flow-bin": "^0.54.1",
+    "flow-typed": "^2.1.5",
     "postcss-cssnext": "^3.0.2"
   }
 }
