--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "abouthiroppy <git@about-hiroppy.com http://about-hiroppy.com",
   "version": "0.8.3",
   "license": "MIT",
-  "description": "sweetpack helps you configure webpack and babel of your application💪",
+  "description": "sweetpack helps eliminate time to suffer from webpack and babel😋",
   "files": [
     "bin",
     "lib"
