--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^3.0.0-beta.7",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.5.6",
     "webpack-dashboard": "^1.0.0-5",
     "webpack-dev-server": "^2.7.1",
@@ -79,7 +80,6 @@
     "eslint": "^4.6.1",
     "eslint-config-sky": "^1.6.2",
     "nyc": "^11.2.1",
-    "pify": "^3.0.0",
-    "url-loader": "^0.5.9"
+    "pify": "^3.0.0"
   }
 }
