--- a/package.json
+++ b/package.json
@@ -63,12 +63,12 @@
     "flow-status-webpack-plugin": "^0.1.7",
     "html-webpack-plugin": "^2.30.1",
     "lodash.mergewith": "^4.6.0",
-    "postcss-loader": "^2.0.6",
-    "react-hot-loader": "^3.0.0-beta.7",
+    "postcss-loader": "^2.0.8",
+    "react-hot-loader": "^3.0.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.6.0",
-    "webpack-dashboard": "^1.0.0-7",
+    "webpack": "^3.7.1",
+    "webpack-dashboard": "^1.0.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
     "yamljs": "^0.3.0",
@@ -77,7 +77,7 @@
   "devDependencies": {
     "ava": "^0.22.0",
     "conventional-changelog-cli": "^1.3.4",
-    "eslint": "^4.8.0",
+    "eslint": "^4.9.0",
     "eslint-config-sky": "^1.6.2",
     "nyc": "^11.2.1",
     "pify": "^3.0.0"
