--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.7.1",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dashboard": "^1.0.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
