--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "findup-sync": "^2.0.0",
     "flow-status-webpack-plugin": "^0.1.7",
     "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.4.2",
     "lodash.mergewith": "^4.6.0",
     "postcss-loader": "^2.0.8",
     "react-hot-loader": "^3.0.0",
